# ChangeLog for app-text/calibre
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/calibre/ChangeLog,v 1.5 2008/06/24 22:35:39 flameeyes Exp $

*calibre-0.4.73 (24 Jun 2008)

  24 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> +calibre-0.4.73.ebuild:
  Update calibre to version 0.4.73.

*calibre-0.4.64 (30 May 2008)

  30 May 2008; Diego Pettenò <flameeyes@gentoo.org> +calibre-0.4.64.ebuild:
  Version bump.

*calibre-0.4.54 (15 May 2008)

  15 May 2008; Diego Pettenò <flameeyes@gentoo.org> +calibre-0.4.54.ebuild:
  Version bump.

  14 May 2008; Diego Pettenò <flameeyes@gentoo.org> calibre-0.4.53.ebuild:
  Depend on Python 2.5, see bug #221935.

*calibre-0.4.53 (12 May 2008)

  12 May 2008; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +calibre-0.4.53.ebuild:
  Initial import of calibre (formerly libprs500), software to handle PRS-500
  and PRS-505 e-Book readers by Sony. Thanks to drac who committed the
  xdg-utils patch it can finally enter the tree.
