@@ -1,20 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST calibre-0.4.53.tar.bz2 3825138 RMD160 de99049d79bae36a023ee7f73bd9b6f48801e85e SHA1 1d0ae70bc38c4eee3c5afdd0f2585b9621fb0167 SHA256 11de8615c0c65f80b3a5c426578a003cdc5cdafec5555ac139098efe6eb46dc4
-DIST calibre-0.4.54.tar.bz2 3838439 RMD160 df4f7cdb7b2e20d22d888425446451fedfd61060 SHA1 872dbfbab272a39dd181b3bd7c11003ce0188a20 SHA256 5159160af7cedb9d79d4bc8b1ed6477567c0bab37c5ee1b9c8da8782bc9f4d46
-DIST calibre-0.4.64.tar.bz2 3930675 RMD160 1c1a1bfaa4a16b1b76fa446ba6330528726ab0a4 SHA1 b939f5d458bad6ea724370b0d926217b75307f67 SHA256 a36354884c9668bdbb6d9862794467e4b14289e7afd89efc81a957c6da24d745
-DIST calibre-0.4.73.tar.bz2 3971193 RMD160 77146766d6f7d810ce8e80d78dadf02098e1df08 SHA1 447a54f20112df6355ec181b6a3f207a27efb2f6 SHA256 ceb588887a6b5d0b7fb1c8ff18864d238eec6c0d8313d7f69c21e536a6905601
-EBUILD calibre-0.4.53.ebuild 2258 RMD160 5625ada21abc6bc5dd668d1daf63f4e593fc0fb9 SHA1 e3f0db53e53d8e83f760c6f2e868654b76d97fae SHA256 446245f24ce26e27fb537ddebbd3b6be317907a1d2c82655c8af651cb2760725
-EBUILD calibre-0.4.54.ebuild 2258 RMD160 b8d7973402f4fc189868792282db133882017e0c SHA1 36bdf6291f928cdb352e9b8ca674b1241029e587 SHA256 029e8a3a0c4898b3c7b058b6859975f082bc618e96bb3ada136104c3460e0b5f
-EBUILD calibre-0.4.64.ebuild 2258 RMD160 cfcab23bd84b8e2d1a7f890dbba536e8fa3f05da SHA1 5ce595d8225ef5d2f987bd5901148d67cb495fdb SHA256 f05832a8766b9ed4be423c5c49b9733037bac0068fdabd524306d9ee00dfdf0f
-EBUILD calibre-0.4.73.ebuild 2279 RMD160 382efca02e5b3ff2bf62b50d50df05480e04a016 SHA1 4de248c749b635af96a9aa1469de54217bd920cd SHA256 090496877308d14279f4d1419fc200f29023ba9c6c39b81e13186b98166b8146
-MISC ChangeLog 1044 RMD160 8e081360c05a9ca170bb661e29f8130dd0919923 SHA1 bf795e9074fcb1dc440212042efd3d81fc88bdaf SHA256 45d62cc3f342e33b63a1ad72e5e67fa0225365a2dc6df97dedaf1b43da8e6c00
+DIST calibre-0.4.76.tar.bz2 4046425 RMD160 94a4d7dbed1669c4884b8f604fbb061cffa25521 SHA1 26a6d3754355955bdeff02921c2267cb2d7a4a60 SHA256 7f646409ecca0a7796fef318fa4c7950bb67020c24b5f4b33fe4497aa6013435
+EBUILD calibre-0.4.76.ebuild 2279 RMD160 1ae9cbd99c1c2915bd731c722866e89651c9dc3b SHA1 7fce1cf4708432f15c5a9a81b42477f24f12ff3b SHA256 23e3d11fd939d59d4bb852627a984cb7c9bc552cd7e093a3d2a2afb1de441065
+MISC ChangeLog 1290 RMD160 fcaa92d991d1826c41840c66f0b51c990417c206 SHA1 579c573e47a69f061c68175bb7bdcbb99d124e6f SHA256 bd96e245fbbca4a557557a8b18a850db7832b3f3907a9c80ff88a9d4317cbe29
 MISC metadata.xml 233 RMD160 da5a1d3b7836dcebb5fec29696b5bfb583fe346c SHA1 1c7142c677598358888a6cfc6f6f65df2e8b6901 SHA256 4d1294dc1b2a6f96aa637a0b8d340bc67191103af0f15197d07fc62446b4a709
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkhhdsgACgkQAiZjviIA2XiPngCdGqCCRnZoR6S9jM94qKJveIp2
-x50AmgOKHLUUyiv8Crgk0R9L3B0uBXl0
-=lA0C
+iEYEARECAAYFAkhuNtgACgkQAiZjviIA2XivtACfSJIp1eRSujpNee9dqlardlM2
+zJQAn2B2ExQ3KYbBO5HqNA1LzvJ6FrZi
+=5j+K
 -----END PGP SIGNATURE-----
